Gallery works right
