# api/swagger.yaml
@@ -108,6 +108,31 @@ paths:
         404:
           description: "Seminar not found"
       x-swagger-router-controller: "Event"
+  /events/gallery/{eventID}:
+    get:
+      tags:
+      - "event"
+      summary: "Find gallery by ID"
+      description: "Returns a gallery"
+      operationId: "getGalleryById"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "eventID"
+        in: "path"
+        description: "ID of gallery to return"
+        required: true
+        type: "integer"
+        format: "int64"
+      responses:
+        200:
+          description: "successful operation"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Gallery not found"
+      x-swagger-router-controller: "Event"
+
   /events/{eventID}:
     get:
       tags:
@@ -567,8 +592,6 @@ definitions:
         type: "string"
       abstract:
         type: "string"
-      gallery:
-        type: "string"
       type:
         $ref: "#/definitions/Types"
     example:
@@ -576,7 +599,6 @@ definitions:
       id: 0
       abstract: "abstract"
       type: {}
-      gallery: "gallery"
 externalDocs:
   description: "Find out more about Swagger"
   url: "http://swagger.io"
